@@ -17,3 +17,29 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
 #include "parameters_terrain.h"
 
+/*! \todo: Might be better (more portable) to use QTime::currentTime () for random seeds.
+ */
+ParametersTerrain::ParametersTerrain()
+  :object_type(ObjectTypePlanet)
+  ,subdivisions_seed(time(0))
+  ,subdivisions(5)
+  ,subdivisions_unperturbed(1)
+  ,variation(0.0,0.0,0.125)
+  ,base_height(0)
+  ,power_law(1.5)
+  ,snowline_equator(0.8)
+  ,snowline_pole(-0.1)
+  ,snowline_power_law(1.0)
+  ,snowline_slope_effect(1.0)
+  ,snowline_glacier_effect(0.1)
+  ,rivers(0)
+  ,rivers_seed(time(0))
+  ,lake_becomes_sea(0.05)
+  ,colour_ocean(0.0,0.0,1.0)
+  ,colour_river(0.0,0.0,1.0)
+  ,colour_shoreline(1.0,1.0,0.0)
+  ,colour_low(0.0,1.0,0.0)
+  ,colour_high(1.0,0.5,0.0)
+  ,colour_snow(1.0,1.0,1.0)
+{}
+
